@@ -1,3 +1,9 @@
+2008-04-24  Kouhei Sutou  <kou@cozmixng.org>
+
+	* pkg-config.rb (PackageConfig#guess_default_path): support
+	PKG_CONFIG_LIBDIR.
+	Suggested by OBATA Akio. Thanks!!!
+
 2008-04-16  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rb_cairo_surface.c: fix unbelievable typos.
